# uhk-tracker

./: README.md  docker-compose.yml
website_scraper/: Cargo.toml  Dockerfile
website_scraper/src/: main.rs  models.rs  persistence.rs  read_web.rs
