[package]
name = "website_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.4.0", features = ["chrono-0_4"] }
chrono = "0.4.22"
clokwerk = "0.4.0-rc1"
mongodb = "2.3.0"
regex = "1.6.0"
reqwest = "0.11.11"
scraper = "0.13.0"
serde = "1.0.144"
tokio = { version = "1", features = ["full"] }
